# calendar-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  config.toml.example
src/: main.rs
